--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,8 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,2880x1620@120,auto,1.333333
+monitor=HP,1920x1080@60,auto,1
+monitor=eDP-2,2880x1620@120,auto,1.333333
 
 # unscale XWayland
 xwayland {
@@ -45,15 +46,14 @@ input {
     kb_layout = us,it
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
-    kb_options = caps:swapescape
+    kb_options = caps:swapescape, grp:alt_space_toggle
     kb_rules =
 
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = true
-	scroll_factor = 0.2
+      natural_scroll = true
+      scroll_factor = 0.2
     }
 
     sensitivity = .25 # -1.0 - 1.0, 0 means no modification.
@@ -65,8 +65,6 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
-    col.active_border = rgb(15d8bb)
-    col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
 
@@ -145,19 +143,21 @@ $menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
 bind = $mainMod, RETURN, exec, alacritty
 # bind = $mainMod, C, killactive,
 bind = $mainMod, Q, killactive
-bind = $mainMod, M, exit
+bind = $mainMod, M, exec, systemctl suspend
 bind = $mainMod, N, exec, shutdown now
 bind = $mainMod, E, exec, dolphin
 # bind = $mainMod, V, togglefloating,
 bind = $mainMod, T, togglefloating,
 bind = $mainMod, F, fullscreen
 bind = $mainMod, SPACE, exec, $menu # albert toggle 
+bind = $mainMod SHIFT, SPACE, exec, tofi-run -c ~/.config/tofi/configV | alacritty -e
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, B, exec, flatpak run app.zen_browser.zen
 bind = $mainMod, V, exec, cliphist list| tofi -c ~/.config/tofi/configV | cliphist decode | wl-copy
 bind = $mainMod, Z, exec, hyprlock
 bind = $mainMod, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -217,7 +217,6 @@ bindm = $mainMod, mouse:273, resizewindow
 binde =, XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+ && volnoti-show $(echo "scale=2;$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/Volume: //') * 500 / 7" | bc)
 binde =, XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%- && volnoti-show $(echo "scale=2;$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/Volume: //') * 500 / 7" | bc)
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && if [ "$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | grep MUTED)" != '' ]; then volnoti-show -m; else volotni-show $(wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/Volume: [1|0].//'); fi
-
 
 # Brightness control
 bind= , XF86MonBrightnessDown, exec, brightnessctl set 5%- 
