--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -45,9 +45,9 @@ input-field {
     outline_thickness = 3
     inner_color = rgba(0, 0, 0, 0.0) # no fill
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+    outer_color = rbga(33ccffee) rbga(33ccffee) 50%
+    check_color = rgba(00ff19ee) rgba(00ff19ee) 50%
+    fail_color = rgba(ed4d17ee) rgba(ed4d17ee) 50%
 
     font_color = rgb(143, 143, 143)
     fade_on_empty = false
