--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -8,8 +8,18 @@ general {
 }
 
 listener {
+   timeout = 280
+   on-timeout = brightnessctl -s set 10
+   on-resume = brightnessctl -r 
+  }
+
+listener {
     timeout = 300                                # 2.5min.
-    on-timeout = brightnessctl -s set 10 && hyprlock  # set monitor backlight to minimum, avoid 0 on OLED monitor.
+    on-timeout = hyprlock                        # set monitor backlight to minimum, avoid 0 on OLED monitor.
     on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
+listener {
+    timeout = 600
+    on-timeout = systemctl suspend
+}
