--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 # You can find more wallpapers in ~/.config/wallpapers/
 # Run ~/.config/hypr/reload-hyprpaper.sh after changing to another wallpaper
-preload = ~/.config/wallpapers/cypress.jpg
-wallpaper = ,~/.config/wallpapers/cypress.jpg
+preload = ~/.config/wallpapers/leaves.png
+wallpaper = ,~/.config/wallpapers/leaves.png
 splash = false
